--- a/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
@@ -71,7 +71,7 @@
                                 </collectionViewFlowLayout>
                             </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7EA-pY-GDv" userLabel="BottomView">
-                                <rect key="frame" x="16" y="436" width="331" height="35"/>
+                                <rect key="frame" x="16" y="436" width="285" height="35"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uPt-GC-e9h">
                                         <rect key="frame" x="0.0" y="5" width="25" height="25"/>
@@ -82,24 +82,24 @@
                                         <color key="tintColor" red="0.79214709999999999" green="0.79215180870000002" blue="0.79216402770000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal" image="line.horizontal.3" catalog="system"/>
                                     </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zhE-qm-INE">
-                                        <rect key="frame" x="33" y="5" width="113" height="25"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zhE-qm-INE" userLabel="vigruzitView">
+                                        <rect key="frame" x="33" y="5" width="105" height="25"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vk" translatesAutoresizingMaskIntoConstraints="NO" id="SgS-Tb-JH2">
-                                                <rect key="frame" x="0.0" y="0.0" width="41" height="25"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vk" translatesAutoresizingMaskIntoConstraints="NO" id="SgS-Tb-JH2">
+                                                <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="25" id="EPH-5x-MdH"/>
-                                                    <constraint firstAttribute="width" constant="41" id="XDk-xH-2pp"/>
+                                                    <constraint firstAttribute="width" constant="25" id="XDk-xH-2pp"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Выгрузить" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SzE-iO-8hf">
-                                                <rect key="frame" x="41" y="4.5" width="72" height="16"/>
+                                                <rect key="frame" x="33" y="4.5" width="72" height="16"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMJ-7j-aH6">
-                                                <rect key="frame" x="0.0" y="0.0" width="113" height="25"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="105" height="25"/>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -107,7 +107,7 @@
                                             <constraint firstAttribute="bottom" secondItem="SgS-Tb-JH2" secondAttribute="bottom" id="0vc-nJ-Peh"/>
                                             <constraint firstItem="SgS-Tb-JH2" firstAttribute="top" secondItem="zhE-qm-INE" secondAttribute="top" id="2k5-LH-fte"/>
                                             <constraint firstItem="vMJ-7j-aH6" firstAttribute="leading" secondItem="zhE-qm-INE" secondAttribute="leading" id="3VD-Hs-H0j"/>
-                                            <constraint firstItem="SzE-iO-8hf" firstAttribute="leading" secondItem="SgS-Tb-JH2" secondAttribute="trailing" id="945-pj-dYL"/>
+                                            <constraint firstItem="SzE-iO-8hf" firstAttribute="leading" secondItem="SgS-Tb-JH2" secondAttribute="trailing" constant="8" id="945-pj-dYL"/>
                                             <constraint firstAttribute="trailing" secondItem="vMJ-7j-aH6" secondAttribute="trailing" id="9ie-nx-0n4"/>
                                             <constraint firstAttribute="bottom" secondItem="vMJ-7j-aH6" secondAttribute="bottom" id="IKS-NZ-DzU"/>
                                             <constraint firstItem="SgS-Tb-JH2" firstAttribute="leading" secondItem="zhE-qm-INE" secondAttribute="leading" id="Lqg-yM-Amj"/>
@@ -117,7 +117,7 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a3x-eB-Twm">
-                                        <rect key="frame" x="154" y="2.5" width="87" height="30"/>
+                                        <rect key="frame" x="146" y="2.5" width="87" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="87" id="bBy-ZP-hUI"/>
                                         </constraints>
@@ -168,13 +168,21 @@
                                     <constraint firstItem="eZp-bw-5Yy" firstAttribute="leading" secondItem="PUa-Dn-Z6k" secondAttribute="leading" id="ybi-x6-wUN"/>
                                 </constraints>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Us6-U2-kyD">
+                                <rect key="frame" x="317" y="437.5" width="30" height="32.5"/>
+                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="7xL-kw-HuR"/>
+                                    <constraint firstAttribute="height" constant="35" id="gRV-jj-zEj"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="p91-BU-613" firstAttribute="leading" secondItem="cQV-oh-YJ4" secondAttribute="leading" constant="16" id="3R9-5d-XFb"/>
+                            <constraint firstItem="Us6-U2-kyD" firstAttribute="top" secondItem="IO7-nw-6KB" secondAttribute="bottom" id="5ly-fl-rSs"/>
                             <constraint firstItem="IO7-nw-6KB" firstAttribute="top" secondItem="p91-BU-613" secondAttribute="bottom" constant="8" id="C1L-gR-xn1"/>
                             <constraint firstItem="IO7-nw-6KB" firstAttribute="leading" secondItem="cQV-oh-YJ4" secondAttribute="leading" constant="16" id="DNS-d8-jsD"/>
-                            <constraint firstAttribute="trailing" secondItem="7EA-pY-GDv" secondAttribute="trailing" constant="16" id="Gvn-CG-9NB"/>
                             <constraint firstAttribute="trailing" secondItem="IO7-nw-6KB" secondAttribute="trailing" constant="16" id="H0r-XL-YXz"/>
                             <constraint firstItem="PUa-Dn-Z6k" firstAttribute="leading" secondItem="cQV-oh-YJ4" secondAttribute="leading" constant="16" id="HGg-Jy-ISj"/>
                             <constraint firstItem="7EA-pY-GDv" firstAttribute="top" secondItem="IO7-nw-6KB" secondAttribute="bottom" id="NZo-Xw-G6Z"/>
@@ -182,8 +190,11 @@
                             <constraint firstItem="p91-BU-613" firstAttribute="top" secondItem="cQV-oh-YJ4" secondAttribute="top" constant="8" id="QE2-HU-H7c"/>
                             <constraint firstAttribute="trailing" secondItem="p91-BU-613" secondAttribute="trailing" constant="16" id="SG0-YC-wEa"/>
                             <constraint firstItem="PUa-Dn-Z6k" firstAttribute="top" secondItem="7EA-pY-GDv" secondAttribute="bottom" id="Sv8-SW-enT"/>
+                            <constraint firstAttribute="trailing" secondItem="Us6-U2-kyD" secondAttribute="trailing" constant="16" id="fbb-BM-iJm"/>
+                            <constraint firstItem="Us6-U2-kyD" firstAttribute="leading" secondItem="7EA-pY-GDv" secondAttribute="trailing" constant="16" id="qc8-Ds-sl6"/>
                             <constraint firstAttribute="trailing" secondItem="PUa-Dn-Z6k" secondAttribute="trailing" constant="16" id="rb9-3C-Vhg"/>
                             <constraint firstItem="7EA-pY-GDv" firstAttribute="leading" secondItem="cQV-oh-YJ4" secondAttribute="leading" constant="16" id="sll-1i-GNF"/>
+                            <constraint firstItem="PUa-Dn-Z6k" firstAttribute="top" secondItem="Us6-U2-kyD" secondAttribute="bottom" id="vCW-Jt-odO"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -203,11 +214,13 @@
                 <outlet property="postedLabel" destination="eZp-bw-5Yy" id="OaP-26-hV9"/>
                 <outlet property="priceLabel" destination="2D9-dG-k9E" id="o87-Hv-JUL"/>
                 <outlet property="vendorLabel" destination="SSR-4S-9BF" id="PqE-PW-DhV"/>
+                <outlet property="vkImageView" destination="SgS-Tb-JH2" id="sxU-hf-4TK"/>
             </connections>
             <point key="canvasLocation" x="52.898550724637687" y="294.30803571428572"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="heart" catalog="system" width="128" height="109"/>
         <image name="line.horizontal.3" catalog="system" width="128" height="64"/>
         <image name="vk" width="2500" height="2500"/>
         <systemColor name="systemBackgroundColor">
