--- a/SadAgregator/View/cells/PostCell/CollectionViewCells/DescCell/DescriptionCollectionViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/CollectionViewCells/DescCell/DescriptionCollectionViewCell.xib
@@ -11,20 +11,21 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="DescriptionCollectionViewCell" customModule="SadAgregator" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="280" height="33"/>
+            <rect key="frame" x="0.0" y="0.0" width="356" height="43"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="280" height="33"/>
+                <rect key="frame" x="0.0" y="0.0" width="356" height="43"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pVI-wT-LbI">
-                        <rect key="frame" x="0.0" y="0.0" width="280" height="33"/>
+                        <rect key="frame" x="0.0" y="0.0" width="356" height="43"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xfE-i8-eRN">
-                                <rect key="frame" x="0.0" y="0.0" width="280" height="33"/>
+                                <rect key="frame" x="0.0" y="0.0" width="356" height="43"/>
+                                <color key="backgroundColor" red="0.960834682" green="0.96459835770000002" blue="0.97255879639999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Показать описание" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="12j-j2-Udy">
-                                <rect key="frame" x="0.0" y="0.0" width="155" height="25"/>
+                                <rect key="frame" x="92.5" y="9" width="155" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="139" id="ERF-sx-Qch"/>
                                     <constraint firstAttribute="height" constant="25" id="pxo-vw-aoj"/>
@@ -34,7 +35,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.down" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="9B5-qF-Vi3">
-                                <rect key="frame" x="252" y="8" width="20" height="10.5"/>
+                                <rect key="frame" x="255.5" y="16.5" width="20" height="10.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="9Ij-Ik-R6e"/>
                                     <constraint firstAttribute="height" constant="20" id="9Q6-2Y-Xlo"/>
@@ -44,13 +45,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="xfE-i8-eRN" secondAttribute="trailing" id="36G-el-NTI"/>
-                            <constraint firstAttribute="bottom" secondItem="12j-j2-Udy" secondAttribute="bottom" constant="8" id="6bE-l0-RKX"/>
                             <constraint firstItem="xfE-i8-eRN" firstAttribute="leading" secondItem="pVI-wT-LbI" secondAttribute="leading" id="70o-ew-3Sx"/>
-                            <constraint firstAttribute="trailing" secondItem="9B5-qF-Vi3" secondAttribute="trailing" constant="8" id="D5P-Xy-cbm"/>
+                            <constraint firstItem="9B5-qF-Vi3" firstAttribute="centerY" secondItem="12j-j2-Udy" secondAttribute="centerY" id="9qx-Mc-PoN"/>
                             <constraint firstAttribute="bottom" secondItem="xfE-i8-eRN" secondAttribute="bottom" id="Jsn-AS-m0m"/>
-                            <constraint firstAttribute="bottom" secondItem="9B5-qF-Vi3" secondAttribute="bottom" constant="10" id="KHA-o2-SLu"/>
-                            <constraint firstItem="12j-j2-Udy" firstAttribute="top" secondItem="pVI-wT-LbI" secondAttribute="top" id="LhW-rn-BFf"/>
-                            <constraint firstItem="12j-j2-Udy" firstAttribute="leading" secondItem="pVI-wT-LbI" secondAttribute="leading" id="Pgj-Yb-Xqd"/>
+                            <constraint firstItem="12j-j2-Udy" firstAttribute="centerX" secondItem="pVI-wT-LbI" secondAttribute="centerX" constant="-8" id="Z5s-yF-TKw"/>
+                            <constraint firstItem="12j-j2-Udy" firstAttribute="centerY" secondItem="pVI-wT-LbI" secondAttribute="centerY" id="bn2-iQ-XXT"/>
+                            <constraint firstItem="9B5-qF-Vi3" firstAttribute="leading" secondItem="12j-j2-Udy" secondAttribute="trailing" constant="8" id="clW-gf-fu8"/>
                             <constraint firstItem="xfE-i8-eRN" firstAttribute="top" secondItem="pVI-wT-LbI" secondAttribute="top" id="ne3-6m-6OG"/>
                         </constraints>
                     </view>
@@ -63,13 +63,14 @@
                 <constraint firstItem="pVI-wT-LbI" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ZHV-uc-gLw"/>
                 <constraint firstAttribute="trailing" secondItem="pVI-wT-LbI" secondAttribute="trailing" id="cOA-xP-dl1"/>
             </constraints>
-            <size key="customSize" width="280" height="33"/>
+            <size key="customSize" width="356" height="43"/>
             <connections>
+                <outlet property="bgView" destination="pVI-wT-LbI" id="fgH-TO-MtU"/>
                 <outlet property="button" destination="xfE-i8-eRN" id="iyi-rb-7MH"/>
                 <outlet property="imageView" destination="9B5-qF-Vi3" id="zw2-ID-2QZ"/>
                 <outlet property="label" destination="12j-j2-Udy" id="a7X-c9-jyB"/>
             </connections>
-            <point key="canvasLocation" x="220.28985507246378" y="102.79017857142857"/>
+            <point key="canvasLocation" x="275.36231884057975" y="106.13839285714285"/>
         </collectionViewCell>
     </objects>
     <resources>
