--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -3115,6 +3115,154 @@
             </objects>
             <point key="canvasLocation" x="576.92307692307691" y="3126.5402843601896"/>
         </scene>
+        <!--Create Client View Controller-->
+        <scene sceneID="hrJ-Bh-8JO">
+            <objects>
+                <viewController storyboardIdentifier="CreateClientVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="giG-i6-gIl" customClass="CreateClientViewController" customModule="SadAgregator" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Uu6-k3-1YT">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JDR-aO-jqD">
+                                <rect key="frame" x="0.0" y="44" width="390" height="766"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4e6-by-dLS">
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="766"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Имя" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Egw-rM-l6X">
+                                                <rect key="frame" x="8" y="16" width="374" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="1el-zB-7Iy"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oSk-3E-Rwi">
+                                                <rect key="frame" x="8" y="46" width="374" height="2"/>
+                                                <color key="backgroundColor" name="gray"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="o7Z-K6-sUY"/>
+                                                </constraints>
+                                            </view>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Телефон (необязат. поле)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bR7-Ln-TLw">
+                                                <rect key="frame" x="8" y="80" width="374" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="haX-Tt-YNg"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                                            </textField>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vtC-og-2hh">
+                                                <rect key="frame" x="8" y="110" width="374" height="2"/>
+                                                <color key="backgroundColor" name="gray"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="pXJ-7M-Cdq"/>
+                                                </constraints>
+                                            </view>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Ссылка ВК (необязат. поле)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UaF-pc-PaN">
+                                                <rect key="frame" x="8" y="144" width="374" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="xDy-gk-mka"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="URL"/>
+                                            </textField>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ikh-Bf-aeE">
+                                                <rect key="frame" x="8" y="174" width="374" height="2"/>
+                                                <color key="backgroundColor" name="gray"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="7Ge-qf-ehC"/>
+                                                </constraints>
+                                            </view>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Ссылка ОК (необязат. поле)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AFH-5G-34A">
+                                                <rect key="frame" x="8" y="208" width="374" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="4s8-C8-VNB"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="URL"/>
+                                            </textField>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nq2-EG-8ef">
+                                                <rect key="frame" x="8" y="238" width="374" height="2"/>
+                                                <color key="backgroundColor" name="gray"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="jCL-h8-PU9"/>
+                                                </constraints>
+                                            </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qQO-IB-ahn">
+                                                <rect key="frame" x="253" y="256" width="129" height="38"/>
+                                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="129" id="23w-OJ-E2p"/>
+                                                    <constraint firstAttribute="height" constant="38" id="mzV-yC-c4m"/>
+                                                </constraints>
+                                                <state key="normal" title="Готово">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailingMargin" secondItem="oSk-3E-Rwi" secondAttribute="trailing" id="0tG-eU-UKw"/>
+                                            <constraint firstItem="AFH-5G-34A" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="0zt-Et-3IT"/>
+                                            <constraint firstItem="vtC-og-2hh" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="9QF-On-wpt"/>
+                                            <constraint firstItem="Egw-rM-l6X" firstAttribute="top" secondItem="4e6-by-dLS" secondAttribute="top" constant="16" id="9hz-MW-A5p"/>
+                                            <constraint firstItem="ikh-Bf-aeE" firstAttribute="top" secondItem="UaF-pc-PaN" secondAttribute="bottom" id="DnC-wZ-1cJ"/>
+                                            <constraint firstItem="UaF-pc-PaN" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="G6x-2Q-E7R"/>
+                                            <constraint firstItem="bR7-Ln-TLw" firstAttribute="top" secondItem="oSk-3E-Rwi" secondAttribute="bottom" constant="32" id="JMq-zT-Y1e"/>
+                                            <constraint firstItem="ikh-Bf-aeE" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="MlH-zc-lat"/>
+                                            <constraint firstItem="vtC-og-2hh" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="PIj-Lr-Dsn"/>
+                                            <constraint firstItem="nq2-EG-8ef" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="SdE-sP-Acy"/>
+                                            <constraint firstItem="oSk-3E-Rwi" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="Tcl-dn-StU"/>
+                                            <constraint firstItem="nq2-EG-8ef" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="Tvp-A4-0hq"/>
+                                            <constraint firstItem="AFH-5G-34A" firstAttribute="top" secondItem="ikh-Bf-aeE" secondAttribute="bottom" constant="32" id="Vsr-Lt-t7Z"/>
+                                            <constraint firstItem="AFH-5G-34A" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="XEb-Rx-b8V"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="qQO-IB-ahn" secondAttribute="trailing" id="XZU-fO-RNp"/>
+                                            <constraint firstItem="qQO-IB-ahn" firstAttribute="top" secondItem="nq2-EG-8ef" secondAttribute="bottom" constant="16" id="Y8q-Nt-cBb"/>
+                                            <constraint firstItem="bR7-Ln-TLw" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="Z5S-fe-LDf"/>
+                                            <constraint firstItem="UaF-pc-PaN" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="bjK-ih-wbE"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="Egw-rM-l6X" secondAttribute="trailing" id="hx9-zw-MUZ"/>
+                                            <constraint firstItem="Egw-rM-l6X" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="joD-Jf-lcC"/>
+                                            <constraint firstItem="UaF-pc-PaN" firstAttribute="top" secondItem="vtC-og-2hh" secondAttribute="bottom" constant="32" id="t9k-hv-G5h"/>
+                                            <constraint firstItem="bR7-Ln-TLw" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="uMk-n9-AqT"/>
+                                            <constraint firstItem="nq2-EG-8ef" firstAttribute="top" secondItem="AFH-5G-34A" secondAttribute="bottom" id="uVf-QG-UEf"/>
+                                            <constraint firstItem="ikh-Bf-aeE" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="ujn-aB-vfN"/>
+                                            <constraint firstItem="vtC-og-2hh" firstAttribute="top" secondItem="bR7-Ln-TLw" secondAttribute="bottom" id="umG-EM-SYk"/>
+                                            <constraint firstItem="oSk-3E-Rwi" firstAttribute="top" secondItem="Egw-rM-l6X" secondAttribute="bottom" id="xdv-Vh-f34"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="4e6-by-dLS" firstAttribute="centerX" secondItem="JDR-aO-jqD" secondAttribute="centerX" id="Q6D-Az-VfG"/>
+                                    <constraint firstAttribute="bottom" secondItem="4e6-by-dLS" secondAttribute="bottom" id="QpA-EI-gpH"/>
+                                    <constraint firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailing" id="Rgm-NZ-qOP"/>
+                                    <constraint firstItem="4e6-by-dLS" firstAttribute="top" secondItem="JDR-aO-jqD" secondAttribute="top" id="YMf-YQ-JyV"/>
+                                    <constraint firstItem="4e6-by-dLS" firstAttribute="leading" secondItem="JDR-aO-jqD" secondAttribute="leading" id="fh9-pS-ltb"/>
+                                    <constraint firstItem="4e6-by-dLS" firstAttribute="centerY" secondItem="JDR-aO-jqD" secondAttribute="centerY" id="vXl-l7-Bhf"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="lZu-o4-faX"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="JDR-aO-jqD" firstAttribute="top" secondItem="lZu-o4-faX" secondAttribute="top" id="836-7D-V7W"/>
+                            <constraint firstItem="lZu-o4-faX" firstAttribute="bottom" secondItem="JDR-aO-jqD" secondAttribute="bottom" id="FAm-bh-EgW"/>
+                            <constraint firstItem="JDR-aO-jqD" firstAttribute="leading" secondItem="lZu-o4-faX" secondAttribute="leading" id="lYQ-va-Ji5"/>
+                            <constraint firstItem="lZu-o4-faX" firstAttribute="trailing" secondItem="JDR-aO-jqD" secondAttribute="trailing" id="lf1-Eb-Iyf"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="doneButton" destination="qQO-IB-ahn" id="r5n-W5-QNQ"/>
+                        <outlet property="nameTextField" destination="Egw-rM-l6X" id="GCQ-Yz-PVe"/>
+                        <outlet property="okTextField" destination="AFH-5G-34A" id="mqw-Cr-Ldj"/>
+                        <outlet property="phoneTextField" destination="bR7-Ln-TLw" id="Xmp-MJ-fcy"/>
+                        <outlet property="vkTextField" destination="UaF-pc-PaN" id="kcU-39-or5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dbb-2f-3Pp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1560" y="3126.5402843601896"/>
+        </scene>
         <!--Payment History View Controller-->
         <scene sceneID="7A7-XU-Gbm">
             <objects>
